--- a/src/styles/order.css
+++ b/src/styles/order.css
@@ -19,14 +19,13 @@ body {
   display: flex;
   flex-direction: column;
   text-align: left;
-  padding-left: 24.5px;
   padding-top: 20px;
   white-space: no-wrap;
   align-items: center;
+  padding: 10%;
 }
 
 .order-subdiv {
-  box-sizing: border-box;
   background-color: rgba(223, 145, 145, 0.8);
   width: 100%;
   border-radius: 10px;
@@ -112,7 +111,6 @@ body {
 /** TEXT BOXES **/
 
 .order-txtbox {
-  box-sizing: border-box;
   padding-left: 10px;
   height: 30px;
   border-radius: 5px;
@@ -121,11 +119,11 @@ body {
 }
 
 .txtbox-main {
-  width: 267px;
+  width: 100%;
 }
 
 .txtbox-sub {
-  width: 239px;
+  width: 100%;
 }
 
 .quantity-picker {
