--- a/src/styles/order.css
+++ b/src/styles/order.css
@@ -5,6 +5,8 @@ body {
   flex-direction: column;
   align-items: center;
   max-width: 400px;
+  text-align: left;
+  box-sizing: border-box;
 }
 
 /** DIVS **/
@@ -21,7 +23,6 @@ body {
   text-align: left;
   padding-top: 20px;
   white-space: no-wrap;
-  align-items: center;
   padding: 10%;
 }
 
@@ -30,9 +31,11 @@ body {
   width: 100%;
   border-radius: 10px;
   padding-top: 12px;
-  padding-left: 10px;
+  padding-left: 12px;
+  padding-right: 10px;
   padding-bottom: 15px;
   margin-top: 10px;
+  box-sizing: border-box;
 }
 
 .quantity-div {
@@ -73,7 +76,7 @@ body {
 .chili-pic-div {
   box-sizing: border-box;
   height: 82px;
-  width: 86.81px;
+  width: 100%;
   background-image: url("../images/chili-bottle.jpg");
   background-size: contain;
   background-repeat: no-repeat;
@@ -123,7 +126,7 @@ body {
 }
 
 .txtbox-sub {
-  width: 100%;
+  width: 90%;
 }
 
 .quantity-picker {
@@ -140,7 +143,7 @@ body {
 /** TEXT AREA **/
 .order-text-area {
   box-sizing: border-box;
-  width: 265px;
+  width: 100%;
   height: 68px;
   border-radius: 5px;
   margin-top: 5px;
@@ -160,7 +163,7 @@ body {
 
 /** BUTTON **/
 .button-green {
-  width: 267px;
+  width: 100%;
   height: 48px;
   border-radius: 10px;
   background-color: #00785b;
