--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -6,7 +6,7 @@ body {
   margin-top: 10px;
   display: flex;
   flex-direction: row;
-  width: 100px;
+  width: 100%;
 }
 .header-style-1 {
   text-align: left;
