--- a/src/styles/order.css
+++ b/src/styles/order.css
@@ -27,7 +27,7 @@ body {
 }
 
 .order-subdiv {
-  background-color: rgba(223, 145, 145, 0.8);
+  background-color: none;
   width: 100%;
   border-radius: 10px;
   padding-top: 12px;
@@ -36,6 +36,7 @@ body {
   padding-bottom: 15px;
   margin-top: 10px;
   box-sizing: border-box;
+  box-shadow: 1px 0 50px 0 rgba(0, 0, 0, 0.5);
 }
 
 .quantity-div {
@@ -84,10 +85,10 @@ body {
 /** TEXT **/
 
 .order-comment {
-  color: red;
+  color: yellow;
 }
 .order-comment2 {
-  color: rgb(98, 4, 4);
+  color: yellow;
   font-size: 10px;
 }
 
