--- a/src/styles/order.css
+++ b/src/styles/order.css
@@ -108,7 +108,7 @@ body {
 .text-total-num {
   font-size: 25px;
   font-weight: bolder;
-  color: #381ce3;
+  color: rgb(192, 31, 31);
 }
 
 /** TEXT BOXES **/
