--- a/src/styles/order.css
+++ b/src/styles/order.css
@@ -16,7 +16,7 @@ body {
   box-sizing: border-box;
   background-color: rgba(115, 9, 9, 0.7);
   width: 100%;
-  height: 900px;
+  height: auto;
   border-radius: 30px;
   display: flex;
   flex-direction: column;
