--- a/src/styles/order.css
+++ b/src/styles/order.css
@@ -53,15 +53,35 @@ body {
 }
 
 .chili-album {
+  box-sizing: border-box;
+  position: relative;
   margin-top: 10px;
   margin-bottom: 10px;
   box-sizing: border-box;
-  height: 261px;
+  height: 300px;
   width: 100%;
-  background-image: url("../images/chili-main.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
+  max-width: 400px;
+  align-items: center;
+  border-radius: 10px;
+}
+
+.slider {
+  box-sizing: border-box;
+  position: relative;
+  width: 100%;
+  height: 300px;
+  background-color: red;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+}
+
+.slider-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
 }
 
 .quantity-subdiv-1 {
